examples/test/testpolicy2920.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2920
  namespace: namespace260
spec:
  podSelector:
    matchLabels:
      key41: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value0
          key3: value7
          key41: value20
      podSelector:
        matchLabels:
          key22: value13
          key37: value12
